playbooks/resources/kafka/IngressRouteTCP.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-ingress
  namespace: kafka
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`kafka-bootstrap.local`)
      services:
        - name: kafka-cluster-kafka-external-bootstrap
          port: 9094  
    - match: HostSNI(`broker-0.local`)
      services:
        - name: kafka-cluster-node-pool-0
          port: 9094
    - match: HostSNI(`broker-1.local`)
      services:
        - name: kafka-cluster-node-pool-1
          port: 9094
    - match: HostSNI(`broker-2.local`)
      services:
        - name: kafka-cluster-node-pool-2
          port: 9094
  tls:
    secretName: kafka-tls
    passthrough: true
